# CS6140-final-project

./: .gitignore  Dockerfile-mamba  Dockerfile-poetry  Dockerfile-postgres  README.md  docker-compose.yml  environment.yml  pyproject.toml
docker/: Dockerfile-mamba
exploration/: dan_explore.ipynb  exploring.ipynb  frame_builder.ipynb  log_reg_analysis.ipynb  model_exploration.ipynb  pytorch_model.ipynb  roc_auc.ipynb  svm_analysis.ipynb  test.ipynb  test_log_reg.py
models/: 1_2_state_dict.pkl  2_4_state_dict.pkl  3_32_state_dict_10000rec.pkl  4_100_state_dict.pkl  4_32_state_dict.pkl  4_64_state_dict.pkl  4_90_state_dict.pkl  4_90_state_dict_leaky_relu.pkl  4_90_state_dict_relu.pkl  LR_lbfgs_l2_C10.pkl  LR_liblinear_l1_C0.1.pkl  LR_liblinear_l1_C10.pkl  LR_liblinear_l2_C1.pkl  LR_newton-cholesky_l2_C10.pkl  SVM_auto_linear_C1.pkl  SVM_auto_linear_C10.pkl  SVM_auto_rbf_C1.pkl  SVM_scale_poly_C10.pkl
models/trained_models/: lr_best_model.json  lr_model.pkl  svm_best_model.json  svm_best_model_poly4.json  svm_model.pkl
old_res/: sample.csv
res/: create-db.sql  create-flights.sql  generate-sql.py  labels.yml  old-create-db.sql  sample.xls
src/exploration/: dan_explore.ipynb  exploring.ipynb  frameBuilder.py  frame_builder.ipynb  main.py  model_exploration.ipynb
src/final_project/base/: base.py  main.py
src/final_project/builder/: builder.py  frame_builder.py
src/final_project/loader/: loader.py
src/final_project/models/: __init__.py  feed_forward.py  log_reg.py  models.py  svm.py
src/final_project/plots/: plots.py
src/generate-sql/: create-ddl.py  old-upload.py  test-sql.py  upload-sql.py
