[tool.poetry]
name = "cs6141-final-project"
version = "0.1.4"
description = "To infinity, and beyond!"
authors = [
    "Daniel Blum <blum.da@northeastern.edu>",
    "Matt Greene <greene.matthew@northeastern.edu>",
    "Bram Ziltzer <ziltzer.b@northeastern.edu>",
]
readme = "README.md"
packages = [{include = "final_project", from = "src"}]

[tool.poetry.scripts]
final-project = 'final_project.base.main:run'

[tool.poetry.dependencies]
python = "^3.11"
black = {extras = ["jupyter"], version = "^23.3.0"}
pandas = "^1.5.3"
pyyaml = "^6.0"
jupyterlab = "^3.6.3"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
tabulate = "^0.9.0"
seaborn = "^0.12.2"
numpy = "^1.24.3"
torch = "^2.0.0"
# torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-linux_x86_64.whl"}
# torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-win_amd64.whl"}
docopt = "^0.6.2"


[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
